fix: scrollbar, logo heights refactor: remove searchbar useEffect

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ body {
 }
 
 .scrollbar::-webkit-scrollbar {
-  width: 20px;
-  height: 4px;
+  width: 100%;
+  height: 8px;
 }
 
 .scrollbar::-webkit-scrollbar-track {
